Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importOnDemand/ImportOnDemandConflicts.java
/* @test /nodynamiccopyright/
 * @compile/fail/ref=ImportOnDemandConflicts.out -XDrawDiagnostics p1/Object.java p1/String.java p2/Boolean.java
 */
